style.css
/* ----------------------------
    General - Default Elements
---------------------------- */ 
:root {
    --navbar-height: 13vh;
    --main-width-padding: 9.5vw;
    --home-section-padding: 5vh 5.5vw 5vh 5.5vw;

    /* --light-colour-1: #D8DBE2; */
    --light-colour-1: #e2ebf5;
    --light-colour-2: #A9BCD0;
    --light-colour-3: #B8BCBF;
    /* --highlight-colour-1: #68c0ce; */
    --highlight-colour-1: #45d3e9;
    /* --highlight-colour-2: #4E919B; */
    --highlight-colour-2: #39b2c5;
    --dark-colour-1: #373F51;
    --dark-colour-2: #1B1B1B;

/*     
    --light-colour-1: white;
    --light-colour-2: rgb(224, 224, 224);;
    --highlight-colour-1: rgb(240, 84, 84);
    --highlight-colour-2: rgb(216, 65, 65);
    --dark-colour-1: rgb(32, 48, 64);
    --dark-colour-2: rgb(32, 48, 64);  */
   
}

html {
    scroll-behavior: smooth;     /* Enables a smooth scroll when pressing links in the nav bar */
    scroll-padding-top: var(--navbar-height);
}

/* Body */
body {
    font-family: "Raleway", "sans-serif";
    font-weight: 400;
    font-size: 1.25rem;
    color: var(--dark-colour-2);
    
    padding: 0;
    margin: 0;
}
body a {
    color: var(--dark-colour-2);
} /* Need this? */

/* Header */
header {
    display: block;
    padding: 1rem var(--main-width-padding);

    position: sticky;
    top: 0;

    background: white;
}
header a {
    text-decoration: none;
}

/* Nav menu */
nav {
    margin: 2rem 0;
    /* font-size: 2.25rem; */
    font-size: 1.25rem;
    font-weight: 600;
}
nav ul {
    display: flex;
    justify-content: space-around;
    text-align: center;
    list-style-type: none;
    
    margin-block-start: 0;
    margin-block-end: 0;
    padding-inline-start: 0;
}
nav ul li {
    margin: 0 1rem;
}
nav ul a {
    text-decoration: none;
}
nav ul a:hover {
    text-decoration: underline;
}
nav ul a:visited {
    color: var(--dark-colour-2);
}


/* Footer */
footer {
    display: block;
    font-size: 1rem;
    margin-top: 3rem;
}
footer a {
    color: var(--highlight-colour-1);
}

/* Headings */
h1 {
    font-size: 2rem;
    margin: 0;
}

h2 {
    font-size: 4rem;
    margin: 0;
}

h3 {
    font-size: 1.75rem;
    margin: 0;
    margin-top: 0;
}

/* Button */
button {
    padding: 0.75rem 1.5rem;
    margin: 1rem 0;
    background-color: var(--highlight-colour-1);
    border-color: var(--highlight-colour-1);
    border-width: 2px;
    border-radius: 3px;
    border-style: solid;
    
    font-size: 1.25rem;
    color: white;
}
button:hover {
    background-color: var(--highlight-colour-2);
    border-color: var(--highlight-colour-2);
}

/* ----------------------------
    General - Custom Elements
---------------------------- */ 
.header-main {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-social-links img {
    max-height: 2.25rem; /* Tied to the font-size of the h1 */
    margin: 0 .25rem;
}

.p-links {
    color: var(--highlight-colour-1);
    font-weight: 600;
}

.footer-contents {
    /* display: flex; */
    /* justify-content: space-between; */
    text-align: center;
    padding: 0 var(--main-width-padding)
}

.footer-links {
    margin: 1rem 0;
}

/* Burger Menu */
#burger {
    display: none;
    color: white;
}

#burger-container {
    /* background-color: rgb(7, 8, 8, .1);  */
    background-color: var(--dark-colour-2);
    /* padding: .25rem 1.25rem .25rem 1.25rem; */     /* Steam deck esc. */
    padding: .5rem .75rem .5rem .75rem; 
    border-radius: 4px;
    color: white;
}

#burger-dropdown-container {
    display: none;
    min-width: 100%;
    padding: 1rem 0;
    padding-bottom: 0;
}

#burger-dropdown {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: var(--dark-colour-2); 
    /* background: rgba(7, 8, 8, 0.05); */
    border-radius: 4px;
    
}

.burger-line {
    width: 30px;
    height: 4px;
    background-color: white;
    margin: 6px 0;
}

.burger-links {
    color: white;
    /* text-align: center; */
    text-decoration: none;
    font-size: 1.4rem;
    padding: 0.75rem 0.5rem;
    /* border-bottom: 1px solid white; */
    margin: 0 0.5rem 0 0.5rem;
}


/* ---------------------
    Home Page Styling
--------------------- */ 
#homepage-hero {
    height: calc(100vh - var(--navbar-height));
    padding: 0 var(--main-width-padding);
}

#intro-container {
    padding: 10% 9.5vw;
}

#intro-greeting {
    font-weight: 400;
}

#intro-name-big {
    font-weight: 600;
}

#intro-desc-big {
    font-weight: 600;
    color: var(--light-colour-3);
}

#intro-contact {
    margin-top: 4rem;
}

.section {
    padding: var(--home-section-padding);
}

.section-inverted {
    padding: var(--home-section-padding);
    background: var(--dark-colour-2);
    color: white;
}
.section-inverted * p {
    color: var(--light-colour-3)
}

.experience-links {
    text-decoration: none;
    color: var(--light-colour-3);
}

.experience-section * .p-links {
    color : var(--highlight-colour-1);
}

.section-content-container {
    padding: 0 calc(var(--main-width-padding) * 1.5);
}


/* ---------------------
    Projects Page Styling
--------------------- */
#project-showcase {
    margin-top: 5vh;
    /* text-align: center; */
}
#project-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.project-card-container {
    /* color: var(--light-colour-3); */
    /* background: var(--dark-colour-2); */
    /* border-color : var(--light-colour-3); */
    border: 1px solid var(--light-colour-3);
    padding: 1rem 2rem;
    border-radius: 5px;
    font-size: 1.25rem;
    margin-bottom: 3rem;
    
    max-width: 42%;
    /* width: 43%; */
}

.project-card-container h3 {
    /* color:white; */
    font-size: 2rem;
}
.project-card-image {
    max-width: 100%;
}

.project-button {
    /* Fix the button position */
}

/* ---------------------
    Resume Page Styling
--------------------- */ 
.cv-container {
    padding: 0 var(--main-width-padding);
}
.cv-container a {
    color: var(--highlight-colour-1);
}

.cv-viewer {
    width: 100%;
    height: 75vh;
}

.iframe-container {
    position: relative;
    overflow: hidden;
    width: 100%;
}


/* ---------------------
    Media Queries
--------------------- */
@media only screen and (max-width: 1024px) {
    .header-social-links {
        display: none;
    }
}

/* Fix issue where if the dropdown is active it will keep open regardless of the size of the page */
@media screen and (min-width: 769px) {    
    #burger {
        display: none;
    }
    #burger-dropdown-container{
        display: none; 
    }    


}

/* Mobile version changes */
@media only screen and (max-width: 768px) {
    h2 {
        font-size: 3rem;
    }
    
    nav {
        display: none;
    }

    header {
        padding: 1rem 5.5vw;
    }
    .header-social-links
    {
        display: none;
    }

    #project-cards {
        justify-content: center;    
    }
    .project-card-container {
        max-width: 100%;
    }

    .section-content-container {
        padding: 0 1vw;
    }

    #burger {
        display: flex;
    }

    #intro-container {
        padding: var(--home-section-padding);
    }
}

